--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Nakoda Jewellers</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <style>
         body {
             margin: 0;
@@ -63,8 +64,79 @@
         .btn:hover {
             background: white;
         }
+
+        .gallery {
+            padding: 60px 20px;
+            background: #111;
+            text-align: center;
+        }
+
+        .products {
+            display: flex;
+            justify-content: center;
+            gap: 30px;
+            flex-wrap: wrap;
+        }
+
+        .card {
+            background: #000;
+            padding: 20px;
+            border-radius: 10px;
+            width: 280px;
+            box-shadow: 0 5px 15px rgba(255,215,0,0.3);
+        }
+
+        .card img {
+            width: 100%;
+            border-radius: 10px;
+        }
+
+        .card p {
+            font-size: 14px;
+            color: #ccc;
+        }
+
+        .whatsapp {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background: linear-gradient(45deg, #25D366, #128C7E);
+            color: white;
+            padding: 12px 20px;
+            border-radius: 50px;
+            text-decoration: none;
+            font-weight: bold;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.4);
+            animation: pulse 1.5s infinite;
+        }
+
+        .whatsapp:hover {
+            background: gold;
+            color: black;
+        }
+
+        @keyframes pulse {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.08); }
+            100% { transform: scale(1); }
+        }
     </style>
+    .product-btn {
+    display: inline-block;
+    margin-top: 10px;
+    padding: 8px 12px;
+    background: gold;
+    color: black;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: bold;
+}
+
+.product-btn:hover {
+    background: white;
+}
 </head>
+
 <body>
 
     <nav>
@@ -74,102 +146,41 @@
     </nav>
 
     <div class="hero">
-        <section class="gallery">
-    <h2>Our Jewellery Collection 💎</h2>
-
-    <div class="products">
-        <div class="card">
-            <img src="https://images.unsplash.com/photo-1617038260897-41a1f14a9b6c" alt="Necklace">
-            <h3>Wedding Necklace Set</h3>
-            <p>Elegant gold polish bridal collection</p>
-        </div>
-
-        <div class="card">
-            <img src="https://images.unsplash.com/photo-1603974372039-adc49044b6bd" alt="Bangles">
-            <h3>Designer Bangles</h3>
-            <p>Premium traditional bangles</p>
-        </div>
-
-        <div class="card">
-            <img src="https://images.unsplash.com/photo-1599643478518-a784e5dc4c8f" alt="Earrings">
-            <h3>Gold Earrings</h3>
-            <p>Stylish and modern designs</p>
-        </div>
-    </div>
-</section>
         <h1>Nakoda Jewellers 💎</h1>
         <p>Premium Wedding & Gold Polish Jewellery Collection</p>
         <a href="contact.html" class="btn">Explore Collection</a>
     </div>
 
-</body><a href="https://wa.me/919468548762" target="_blank" class="whatsapp">
-    <span>Chat Now</span>
+    <section class="gallery">
+        <h2>Our Jewellery Collection 💎</h2>
+
+        <div class="products">
+            <div class="card">
+                <img src="https://images.unsplash.com/photo-1617038260897-41a1f14a9b6c">
+                <h3>Wedding Necklace Set</h3>
+                <p>Elegant gold polish bridal collection</p>
+            </div>
+            <a href="https://wa.me/919468548762?text=I%20am%20interested%20in%20Wedding%20Necklace%20Set" target="_blank" class="product-btn">
+    Enquire Now
 </a>
 
-<style>
-    .gallery {
-    padding: 60px 20px;
-    background: #111;
-    text-align: center;
-}
+            <div class="card">
+                <img src="https://images.unsplash.com/photo-1603974372039-adc49044b6bd">
+                <h3>Designer Bangles</h3>
+                <p>Premium traditional bangles</p>
+            </div>
 
-.gallery h2 {
-    font-size: 35px;
-    margin-bottom: 40px;
-}
+            <div class="card">
+                <img src="https://images.unsplash.com/photo-1599643478518-a784e5dc4c8f">
+                <h3>Gold Earrings</h3>
+                <p>Stylish and modern designs</p>
+            </div>
+        </div>
+    </section>
 
-.products {
-    display: flex;
-    justify-content: center;
-    gap: 30px;
-    flex-wrap: wrap;
-}
+    <a href="https://wa.me/919468548762" target="_blank" class="whatsapp">
+        Chat Now
+    </a>
 
-.card {
-    background: #000;
-    padding: 20px;
-    border-radius: 10px;
-    width: 280px;
-    box-shadow: 0 5px 15px rgba(255,215,0,0.3);
-}
-
-.card img {
-    width: 100%;
-    border-radius: 10px;
-}
-
-.card h3 {
-    margin: 15px 0 10px;
-}
-
-.card p {
-    font-size: 14px;
-    color: #ccc;
-}
-.whatsapp {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background: linear-gradient(45deg, #25D366, #128C7E);
-    color: white;
-    padding: 12px 20px;
-    border-radius: 50px;
-    text-decoration: none;
-    font-weight: bold;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.4);
-    animation: pulse 1.5s infinite;
-}
-
-.whatsapp:hover {
-    background: gold;
-    color: black;
-}
-
-@keyframes pulse {
-    0% { transform: scale(1); }
-    50% { transform: scale(1.08); }
-    100% { transform: scale(1); }
-}
-</style>
-</style>
+</body>
 </html>
