--- a/index.html
+++ b/index.html
@@ -44,12 +44,6 @@
 
         .hero h1 {
             font-size: 50px;
-            margin-bottom: 20px;
-        }
-
-        .hero p {
-            font-size: 22px;
-            margin-bottom: 30px;
         }
 
         .btn {
@@ -59,10 +53,6 @@
             text-decoration: none;
             font-weight: bold;
             border-radius: 5px;
-        }
-
-        .btn:hover {
-            background: white;
         }
 
         .gallery {
@@ -91,50 +81,38 @@
             border-radius: 10px;
         }
 
-        .card p {
-            font-size: 14px;
-            color: #ccc;
+        .product-btn {
+            display: inline-block;
+            margin-top: 10px;
+            padding: 8px 12px;
+            background: gold;
+            color: black;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+        }
+
+        .product-btn:hover {
+            background: white;
+        }
+
+        .location {
+            padding: 60px 20px;
+            text-align: center;
         }
 
         .whatsapp {
             position: fixed;
             bottom: 20px;
             right: 20px;
-            background: linear-gradient(45deg, #25D366, #128C7E);
+            background: #25D366;
             color: white;
             padding: 12px 20px;
             border-radius: 50px;
             text-decoration: none;
             font-weight: bold;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.4);
-            animation: pulse 1.5s infinite;
-        }
-
-        .whatsapp:hover {
-            background: gold;
-            color: black;
-        }
-
-        @keyframes pulse {
-            0% { transform: scale(1); }
-            50% { transform: scale(1.08); }
-            100% { transform: scale(1); }
         }
     </style>
-    .product-btn {
-    display: inline-block;
-    margin-top: 10px;
-    padding: 8px 12px;
-    background: gold;
-    color: black;
-    text-decoration: none;
-    border-radius: 5px;
-    font-weight: bold;
-}
-
-.product-btn:hover {
-    background: white;
-}
 </head>
 
 <body>
@@ -152,30 +130,51 @@
     </div>
 
     <section class="gallery">
-        <h2>Our Jewellery Collection 💎</h2>
+        <h2>Our Jewellery Collection</h2>
 
         <div class="products">
+
             <div class="card">
                 <img src="https://images.unsplash.com/photo-1617038260897-41a1f14a9b6c">
                 <h3>Wedding Necklace Set</h3>
                 <p>Elegant gold polish bridal collection</p>
+                <a href="https://wa.me/919468548762?text=I%20am%20interested%20in%20Wedding%20Necklace%20Set" target="_blank" class="product-btn">
+                    Enquire Now
+                </a>
             </div>
-            <a href="https://wa.me/919468548762?text=I%20am%20interested%20in%20Wedding%20Necklace%20Set" target="_blank" class="product-btn">
-    Enquire Now
-</a>
 
             <div class="card">
                 <img src="https://images.unsplash.com/photo-1603974372039-adc49044b6bd">
                 <h3>Designer Bangles</h3>
                 <p>Premium traditional bangles</p>
+                <a href="https://wa.me/919468548762?text=I%20am%20interested%20in%20Designer%20Bangles" target="_blank" class="product-btn">
+                    Enquire Now
+                </a>
             </div>
 
             <div class="card">
                 <img src="https://images.unsplash.com/photo-1599643478518-a784e5dc4c8f">
                 <h3>Gold Earrings</h3>
                 <p>Stylish and modern designs</p>
+                <a href="https://wa.me/919468548762?text=I%20am%20interested%20in%20Gold%20Earrings" target="_blank" class="product-btn">
+                    Enquire Now
+                </a>
             </div>
+
         </div>
+    </section>
+
+    <section class="location">
+        <h2>Visit Our Store 📍</h2>
+        <p>Nakoda Jewellers, Jodhpur, Rajasthan</p>
+
+        <iframe 
+            src="https://www.google.com/maps?q=Jodhpur,Rajasthan&output=embed"
+            width="100%" 
+            height="300" 
+            style="border:0;" 
+            loading="lazy">
+        </iframe>
     </section>
 
     <a href="https://wa.me/919468548762" target="_blank" class="whatsapp">
