Updated shop address and map

--- a/index.html
+++ b/index.html
@@ -166,7 +166,12 @@
 
     <section class="location">
         <h2>Visit Our Store 📍</h2>
-        <p>Nakoda Jewellers, Jodhpur, Rajasthan</p>
+        <p>
+         Nakoda Jewellers<br>
+         Shree Maliyo Ka Chowk,<br>
+         Balotra, Rajasthan - 344022<br>
+        📞 +91 9468548762
+        </p>
 
         <iframe 
             src="https://www.google.com/maps?q=Jodhpur,Rajasthan&output=embed"
