Updated shop address and map

--- a/index.html
+++ b/index.html
@@ -171,10 +171,11 @@
          Shree Maliyo Ka Chowk,<br>
          Balotra, Rajasthan - 344022<br>
         📞 +91 9468548762
-        </p>
+
+        </p><p>🕒 Open: Monday – Sunday | 10:00 AM – 9:00 PM</p>
 
         <iframe 
-            src="https://www.google.com/maps?q=Jodhpur,Rajasthan&output=embed"
+            src="https://maps.app.goo.gl/W4taEJJoXs5KEsdA8"
             width="100%" 
             height="300" 
             style="border:0;" 
