Fixed Google map embed

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         </p><p>🕒 Open: Monday – Sunday | 10:00 AM – 9:00 PM</p>
 
         <iframe 
-            src="https://maps.app.goo.gl/W4taEJJoXs5KEsdA8"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3591.2583147813216!2d72.23958927491103!3d25.828032105861965!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3943e8d42b8911f7%3A0x4666fe3e0e067c76!2sNakoda%20jewellers!5e0!3m2!1sen!2sin!4v1771932670110!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"
             width="100%" 
             height="300" 
             style="border:0;" 
