Fixed hero structure

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <a href="contact.html">Contact</a>
     </nav>
 
-    <div class="hero" id="home"></div>
+    <div class="hero" id="home">
         <h1>Nakoda Jewellers 💎</h1>
         <p>Premium Wedding & Gold Polish Jewellery Collection</p>
         <a href="contact.html" class="btn">Explore Collection</a>
