Added premium hover animations

--- a/index.html
+++ b/index.html
@@ -84,11 +84,22 @@
             border-radius: 10px;
             width: 280px;
             box-shadow: 0 5px 15px rgba(255,215,0,0.3);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 10px 25px rgba(255,215,0,0.6);
         }
 
         .card img {
             width: 100%;
             border-radius: 10px;
+            transition: transform 0.4s ease;
+        }
+
+        .card:hover img {
+            transform: scale(1.05);
         }
 
         .product-btn {
