--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <title>Nakoda Jewellers</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
     <style>
         html {
             scroll-behavior: smooth;
         }
         body {
             margin: 0;
-            font-family: 'Georgia', serif;
+            font-family: 'Playfair Display', serif;
             background-color: #000;
             color: gold;
         }
@@ -53,7 +53,14 @@
         }
 
         .hero h1 {
-            font-size: 50px;
+            font-size: 60px;
+            letter-spacing: 2px;
+        }
+         
+        .hero h1 {
+            background: linear-gradient(to right, #d4af37, #ffd700, #d4af37);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
         }
 
         .btn {
