--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <div class="products">
 
             <div class="card">
-                <img src="https://images.unsplash.com/photo-1617038260897-41a1f14a9b6c">
+                <img src="https://images.unsplash.com/photo-1617038260897-41a1f14a9b6c" onclick="openImage(this.src)">
                 <h3>Wedding Necklace Set</h3>
                 <p>Elegant gold polish bridal collection</p>
                 <a href="https://wa.me/919468548762?text=I%20am%20interested%20in%20Wedding%20Necklace%20Set" target="_blank" class="product-btn">
@@ -173,7 +173,7 @@
             </div>
 
             <div class="card">
-                <img src="https://images.unsplash.com/photo-1603974372039-adc49044b6bd">
+                <img src="https://images.unsplash.com/photo-1603974372039-adc49044b6bd" onclick="openImage(this.src)">
                 <h3>Designer Bangles</h3>
                 <p>Premium traditional bangles</p>
                 <a href="https://wa.me/919468548762?text=I%20am%20interested%20in%20Designer%20Bangles" target="_blank" class="product-btn">
@@ -182,7 +182,7 @@
             </div>
 
             <div class="card">
-                <img src="https://images.unsplash.com/photo-1599643478518-a784e5dc4c8f">
+                <img src="https://images.unsplash.com/photo-1599643478518-a784e5dc4c8f" onclick="openImage(this.src)">
                 <h3>Gold Earrings</h3>
                 <p>Stylish and modern designs</p>
                 <a href="https://wa.me/919468548762?text=I%20am%20interested%20in%20Gold%20Earrings" target="_blank" class="product-btn">
